--- a/photo.html
+++ b/photo.html
@@ -36,7 +36,7 @@
     
     <center>
         <header style="font-size: 40px;">
-            Photo Search AI
+            Photo Search And Upload AI
         </header>
     </center>
     <body style="color: black; background-color: whitesmoke;">
